# termicode

./: Cargo.toml  README.md
src/: data.rs  logger.rs  main.rs  query.rs
src/ui/: app.rs  focus_controller.rs  mod.rs
