[package]
name = "termicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
pico-args = "0.4"
clipboard = "0.5"
unicode-width = "0.1"
regex = "1"